--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
+.meet {
+  text-align: center;
+}
 .meet .meet__title__top {
   font-family: Kaushan Script;
   text-align: center;
   font-size: 2em;
+  padding-top: 3%;
 }
 .meet .meet__title__middle {
   text-align: center;
@@ -30,45 +34,52 @@
     font-size: 1em;
   }
 }
-.meet div div {
+.meet div .col-xs-12 {
   padding-top: 3%;
 }
-.meet div div .meet__team--people {
-  background-size: cover;
-  background-position: center;
+@media only screen and (max-width: 768px) {
+  .meet div .col-xs-12 {
+    padding-left: 20%;
+    padding-top: 5%;
+  }
+}
+.meet div .col-xs-12 .meet__team--people {
   width: 360px;
   height: 450px;
   opacity: 1;
   z-index: 50;
 }
 @media only screen and (max-width: 1200px) {
-  .meet div div .meet__team--people {
+  .meet div .col-xs-12 .meet__team--people {
     width: 300px;
     height: 400px;
   }
 }
 @media only screen and (max-width: 992px) {
-  .meet div div .meet__team--people {
+  .meet div .col-xs-12 .meet__team--people {
     width: 200px;
     height: 300px;
   }
 }
 @media only screen and (max-width: 768px) {
-  .meet div div .meet__team--people {
+  .meet div .col-xs-12 .meet__team--people {
     width: 360px;
     height: 450px;
   }
 }
-.meet div div .meet__team--people--1 {
+.meet div .col-xs-12 .meet__team--people--1 {
   background: url("../img/meet_img_1.png");
+  background-size: cover;
 }
-.meet div div .meet__team--people--2 {
+.meet div .col-xs-12 .meet__team--people--2 {
   background: url("../img/meet_img_2.png");
+  background-size: cover;
 }
-.meet div div .meet__team--people--3 {
+.meet div .col-xs-12 .meet__team--people--3 {
   background: url("../img/meet_img_3.png");
+  background-size: cover;
 }
-.meet div div .meet__team--back {
+.meet div .col-xs-12 .meet__team--back {
   width: 360px;
   height: 450px;
   opacity: 1;
@@ -77,24 +88,24 @@
   background-color: #95e1d3;
 }
 @media only screen and (max-width: 1200px) {
-  .meet div div .meet__team--back {
+  .meet div .col-xs-12 .meet__team--back {
     width: 300px;
     height: 400px;
   }
 }
 @media only screen and (max-width: 992px) {
-  .meet div div .meet__team--back {
+  .meet div .col-xs-12 .meet__team--back {
     width: 200px;
     height: 300px;
   }
 }
 @media only screen and (max-width: 768px) {
-  .meet div div .meet__team--back {
+  .meet div .col-xs-12 .meet__team--back {
     width: 360px;
     height: 450px;
   }
 }
-.meet div div .meet__team--top {
+.meet div .col-xs-12 .meet__team--top {
   width: 360px;
   height: 450px;
   opacity: 0;
@@ -102,10 +113,7 @@
   position: absolute;
   background: linear-gradient(#f38181, #fce38a);
 }
-.meet div div .meet__team--top .row {
-  display: inline;
-}
-.meet div div .meet__team--top .row .meet__team__img__small--1 {
+.meet div .col-xs-12 .meet__team--top--1 {
   background-color: #f38181;
   margin-top: 45%;
   padding: 10px 15px 10px 15px;
@@ -113,11 +121,11 @@
   margin-right: -2px;
 }
 @media only screen and (max-width: 992px) {
-  .meet div div .meet__team--top .row .meet__team__img__small--1 {
+  .meet div .col-xs-12 .meet__team--top--1 {
     padding: 5px 10px 5px 10px;
   }
 }
-.meet div div .meet__team--top .row .meet__team__img__small--2 {
+.meet div .col-xs-12 .meet__team--top--2 {
   background-color: #fce38a;
   margin-top: 45%;
   padding: 12px 15px 12px 15px;
@@ -125,11 +133,11 @@
   margin-right: -2px;
 }
 @media only screen and (max-width: 992px) {
-  .meet div div .meet__team--top .row .meet__team__img__small--2 {
+  .meet div .col-xs-12 .meet__team--top--2 {
     padding: 7px 10px 7px 10px;
   }
 }
-.meet div div .meet__team--top .row .meet__team__img__small--3 {
+.meet div .col-xs-12 .meet__team--top--3 {
   background-color: #fce38a;
   margin-top: 45%;
   padding: 10px 15px 10px 15px;
@@ -137,282 +145,82 @@
   margin-right: -2px;
 }
 @media only screen and (max-width: 992px) {
-  .meet div div .meet__team--top .row .meet__team__img__small--3 {
+  .meet div .col-xs-12 .meet__team--top--3 {
     padding: 5px 10px 5px 10px;
   }
 }
 @media only screen and (max-width: 1200px) {
-  .meet div div .meet__team--top {
+  .meet div .col-xs-12 .meet__team--top {
     width: 300px;
     height: 400px;
   }
 }
 @media only screen and (max-width: 992px) {
-  .meet div div .meet__team--top {
+  .meet div .col-xs-12 .meet__team--top {
     width: 200px;
     height: 300px;
   }
 }
 @media only screen and (max-width: 768px) {
-  .meet div div .meet__team--top {
+  .meet div .col-xs-12 .meet__team--top {
     width: 360px;
     height: 450px;
   }
 }
-.meet div div .meet__team--top:hover {
+.meet div .col-xs-12 .meet__team--top:hover {
   opacity: 0.8;
   margin-top: -20px;
   margin-left: -20px;
+  margin-bottom: 20px;
 }
-.meet div div .meet__team--top:hover + .meet__team--people {
+.meet div .col-xs-12 .meet__team--top:hover + .meet__team--people {
+  margin-bottom: 20px;
   margin-top: -20px;
   margin-left: -20px;
 }
 .meet__name {
+  text-align: center;
+  position: relative;
+}
+@media only screen and (max-width: 768px) {
+  .meet__name {
+    opacity: 0;
+    position: absolute;
+  }
+}
+.meet__name div {
   padding-top: 5%;
 }
-.meet__name--name {
+.meet__name div .meet__name--name {
   font-weight: bold;
   font-size: 1.1em;
-  margin-left: 100%;
 }
-.meet__name--work {
+.meet__name div .meet__name--work {
   color: #e5e5e5;
   font-style: italic;
   font-size: 1em;
-  margin-left: 110%;
+}
+.meet__name--xs {
+  opacity: 0;
+  position: absolute;
+}
+@media only screen and (max-width: 768px) {
+  .meet__name--xs {
+    position: relative;
+    opacity: 1;
+    margin-left: -55%;
+  }
+  .meet__name--xs--name {
+    font-weight: bold;
+    font-size: 1.1em;
+  }
+  .meet__name--xs--work {
+    color: #e5e5e5;
+    font-style: italic;
+    font-size: 1em;
+  }
 }
 
-    /*&--one--pictogram,
-    &--one--pictogram{
-      margin: 0;
-      opacity: 0;
-
-      &--1 {
-        //-webkit-transform: translateY(-100%);
-        //transform: translateY(-100%);
-        padding-bottom: 10px;
-        padding-top: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
-        background-color: $color-red;
-
-      }
-      &--2 {
-        //-webkit-transform: translateY(-100%);
-        //transform: translateY(-100%);
-        padding-bottom: 10px;
-        padding-top: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
-        background-color: $color-yellow;
-
-      }
-    }
-
-
-    &--one:hover:before,
-    &--one.hover:before {
-      top: 0px;
-      -webkit-transition-delay: 0s;
-      transition-delay: 0s;
-      opacity: 0.8;
-
-      &--pictogram:hover,
-      &--pictogram.hover {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        opacity: 1;
-      }
-    }
-    &--one:hover:after,
-    &--one.hover:after {
-      top: 20px;
-      bottom: -20px;
-      -webkit-transition-delay: 0s;
-      transition-delay: 0s;
-      opacity: 1;
-      height: 100%;
-    }
-    &--one:hover img,
-    &--one.hover img{
-      margin-left: -20px;
-      padding-bottom: -20px;
-      transition: .5s ease;
-    }
-    &--one--pictogram:hover,
-    &--one--pictogram.hover {
-      -webkit-transition-delay: 0.5s;
-      transition-delay: 0.1s;
-      margin-left: 0px;
-      padding-bottom: 0px;
-      transition: .5s ease;
-    }*/
-    /* width: 100%;
-     &--back{
-       background-color: $color-blue;
-       width: 100%;
-       height: 100%;
-     }
-     &--img{
-       opacity: 0;
-
-     }
-     &--top{
-
-     }
-   }
- }*/
-  /*.meet__team {
-    padding-top: 3%;
-    div {
-      div {
-        .meet__team__img {
-          img {
-            width: 90%;
-            left: 30px;
-            margin-top:-459px;
-            @media only screen and (max-width: $md)
-            {
-              margin-top:-370px;
-            }
-            @media only screen and (max-width: $sm)
-            {
-              margin-top:-305px;
-            }
-            @media only screen and (max-width: $xs)
-            {
-              width: 350px;
-              margin-top:-455px;
-            }
-          }
-        }
-        .meet__team__img:before{
-          content: " ";
-          display: block;
-          width: 351px;
-          height: 434px;
-          background-color: $color-blue;
-          margin-left: 20px;
-          @media only screen and (max-width: $md)
-          {
-            width: 285px;
-            height: 355px;
-            margin-top: 10px;
-          }
-          @media only screen and (max-width: $sm)
-          {
-            width: 225px;
-            height: 280px;
-            margin-top: 10px;
-            margin-left: 15px;
-          }
-          @media only screen and (max-width: $xs)
-          {
-            width: 350px;
-            height: 435px;
-            margin-left: 26.5%;
-          }
-        }
-        .meet__team__img:after{
-          content: " ";
-          position: absolute;
-          width: 351px;
-          height: 434px;
-          background: linear-gradient($color-red, $color-yellow);
-          margin-left: -350px;
-          margin-top: -435px;
-          opacity: 0;
-          @media only screen and (max-width: $md)
-          {
-            width: 290px;
-            height: 362px;
-            margin-left: -290px;
-            margin-top: -350px;
-          }
-          @media only screen and (max-width: $sm)
-          {
-            width: 229px;
-            height: 280px;
-            margin-left: -230px;
-            margin-top: -280px;
-          }
-          @media only screen and (max-width: $xs)
-          {
-            width: 350px;
-            height: 435px;
-            margin-left: -350px;
-            margin-top: -435px;
-          }
-        }
-        .meet__team__img:hover {
-          img {
-            margin-left: -20px;
-            margin-bottom: 20px;
-            transition: .5s ease;
-            @media only screen and (max-width: $md)
-            {
-              margin-bottom: 30px;
-
-            }
-          }
-        }
-        .meet__team__img:hover:after{
-          margin-top: -445.5px;
-          transition: .5s ease;
-          opacity: 0.8;
-          @media only screen and (max-width: $md)
-          {
-            margin-top: -370px;
-          }
-          @media only screen and (max-width: $sm){
-            margin-top: -297px;
-          }
-          @media only screen and (max-width: $xs){
-            margin-top: -450px;
-          }
-        }
-       /* .meet__team__img:hover:after{
-          content: "tekst ";
-          display: block;
-          background: linear-gradient($color-red, $color-yellow);
-          height: 434.13px;
-          width: 351px;
-          margin-top:-459px;
-          z-index: 5;
-        }
-      }*/
-/*     .meet__team__name{
-       font-weight: bold;
-       padding-top: 3%;
-       font-size: 1.1em;
-     }
-     .meet__team__work{
-       color:$color-grey-middle;
-       padding-top: 3%;
-       font-style: italic;
-       font-size: 1em;
-     }
-   }*/
- /*   .meet__team__img__small{
-      width: 8%;
-      display: inline;
-      img {
-        z-index: 50;
-        position: relative;
-        display: inline;
-        margin-top: -200px;
-        width: 8%;
-      }
-    }
-    .meet__team__img__small--1{
-
-    }
-    .meet__team__img__small--2{
-
-    }
-
-*/
 .logos {
   margin-top: 3%;
   background-color: #f8f8f8;
@@ -1343,7 +1151,7 @@
 }
 @media only screen and (max-width: 992px) {
   .foot__1--site img {
-    padding-right: 4%;
+    padding-right: 3%;
   }
 }
 .foot__1 form input[type=text] {
